--- a/.github/workflows/Official.yml
+++ b/.github/workflows/Official.yml
@@ -167,6 +167,11 @@ jobs:
       working-directory: /${{ env.DIY_WORK }}
       run: |
         git clone -b "${REPO_BRANCH}" --single-branch "${REPO_URL}" openwrt
+        cd ./openwrt
+        git clone https://github.com/Kazagumo/OPi-Zero2-OPPatcher --depth=1
+        cd ./OPi-Zero2-OPPatcher
+        bash ./replace.sh
+        cd ../../
         ln -sf /${{ env.DIY_WORK }}/openwrt ${GITHUB_WORKSPACE}/openwrt
         source ${GITHUB_WORKSPACE}/build/${{ env.FOLDER_NAME }}/common.sh && Diy_checkout
     
