--- a/.github/workflows/Official.yml
+++ b/.github/workflows/Official.yml
@@ -30,7 +30,7 @@ on:
       CONFIG_FILE:
         description: '请选择配置文件'
         required: true
-        default: 'x86_64'
+        default: 'OPiZero2'
         type: choice
         options:
           - 'x86_64'
